--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -16,5 +16,5 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - run: npm install
-      - run: npm run build
+      - run: npm build
       - run: npm test
